--- a/RocketMQ/04-高级功能.md
+++ b/RocketMQ/04-高级功能.md
@@ -56,8 +56,14 @@ Linux操作系统分为用户态和内核态，文件操作、网络操作需要
 如图：
 
 ```mermaid
-graph LR
- 磁盘数据 --> 内核态 --> 用户态 --> 网络驱动内核 --> 网卡 --> 数据输出
+graph LR;
+ 磁盘数据 --> 内核态 --> 用户态 --> 网络驱动内核 --> 网卡 --> 数据输出;
+```
+
+```mermaid
+graph LR;
+A-->B;
+B-->C;
 ```
 
 通过使用 mmap 的方式，可以省去向用户态的内存复制，提高速度。即内核态直接复制都网络驱动内核中。这种机制在 java 中通过 MappedByteBuffer实现的。
